Fixed blockquote cutting off when to small.

--- a/less/plugin-blog.less
+++ b/less/plugin-blog.less
@@ -354,7 +354,7 @@
     }
     // Post body spacing
     .post-body {
-        @media only screen and (min-width : 768px) {
+        @media only screen and (min-width : 860px) {
             width: 70%;
             margin: 0 auto;
             padding-left: 30px;
