--- a/less/plugin-menu.less
+++ b/less/plugin-menu.less
@@ -142,6 +142,11 @@
 .item-footer {
     background-color: lighten(@color-swatch1, 3%);
     padding: 20px;
+
+    .item-subtitle, .item-details, .dietary-item {
+        font-size: bkscale(@font-swatch5-font-size, 0.9);
+        line-height: bkscale(@font-swatch5-line-height, 0.9);
+    }
 }
 
 // Dietary icons
