--- a/stylesheet.less
+++ b/stylesheet.less
@@ -132,15 +132,13 @@ a {
 .content blockquote {
     position: relative;
     quotes: "“" "”" "“" "”";
-    width: 80%;
     margin-right: 5%;
-    margin-left: 15%;
+    margin-left: 16%;
     margin-top: 10px;
     margin-bottom: 10px;
     padding-left: 15px;
     border-left: 3px solid @color-swatch3;
     @media @mobile {
-        width: 85%;
         margin-right: 0;
     }
     &:before {
@@ -152,8 +150,8 @@ a {
         line-height: 50px;
         margin-right: 5px;
         padding: 0;
-        width: 34px;
-        height: 34px;
+        width: 32px;
+        height: 32px;
         text-align: center;
         vertical-align: middle;
         -webkit-border-radius: 50px;
